--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "fs": "^0.0.1-security",
+    "jszip": "^3.9.1",
     "react": "^18.0.0",
+    "react-bootstrap": "^1.6.4",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^18.0.0",
+    "react-dropzone": "^12.0.5",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-svg-to-image": "^3.0.0",
+    "react-tabs": "^5.1.0",
+    "scandir": "^0.1.2",
+    "sharp": "^0.30.4",
+    "svg": "^0.1.0",
+    "web-vitals": "^2.1.4",
+    "webpack": "4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,6 +33,11 @@
       "react-app/jest"
     ]
   },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -30,6 +45,7 @@
       "not op_mini all"
     ],
     "development": [
+      "last 1 edge version",
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
