--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.1.3",
     "fs": "^0.0.1-security",
     "jszip": "^3.9.1",
+    "merge-images": "^2.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^1.6.4",
     "react-copy-to-clipboard": "^5.0.3",
