--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "canvas": "^2.9.1",
     "fs": "^0.0.1-security",
     "jszip": "^3.9.1",
     "merge-images": "^2.0.0",
